log
Thu 20 Apr 2023 11:48:48 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: ‘new’ undeclared (first use in this function)
   42 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:42:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:12: error: unused variable ‘tree’ [-Werror=unused-variable]
   41 |   TreeMap *tree=
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
ed4ea17
